--- a/projeto/bio.css
+++ b/projeto/bio.css
@@ -63,3 +63,36 @@ main div {
 aside {
   text-align: center;
 }
+
+blockquote {
+    margin: 20px 40px;
+}
+
+main h1 {
+    font-size: 60px;
+}
+
+p {
+    margin: 20px 0;
+}
+
+aside h1 {
+    font-size: 30px;
+    margin-bottom: 25px;
+}
+
+main div {
+    padding: 30px 0;
+}
+
+strong {
+    font-weight: bold;
+}
+
+em {
+    font-style: italic;
+}
+
+h2 {
+    font-size: 30px;
+}
