Aula 8 - Mais Seletores - Ajustes Finos no Blog

--- a/projeto/bio.css
+++ b/projeto/bio.css
@@ -100,3 +100,15 @@ h2 {
 .icones-sociais li{
   display: inline-block;
 }
+
+#rodape-pagina {
+    background-color: #000;
+    color: #F2FFFC;
+    padding: 20px;
+}
+
+article {
+    padding-bottom: 30px;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 20px;
+}
