Aula 8 - Mais Seletores - Usar classes

--- a/projeto/bio.css
+++ b/projeto/bio.css
@@ -21,11 +21,11 @@ p {
   text-align: justify;
 }
 
-blockquote {
-  background-color: #D9E5E3;
-  border: 10px solid #C2CCCA;
-  width: 250px;
-  box-sizing: border-box;
+.navegacao-site {
+  background-color: #3C1D3D;
+  color: #F2FFFC;
+  padding: 20px;
+  text-align: center;
 }
 
 aside {
